[Add] Primeiro commit

--- a/index2.html
+++ b/index2.html
@@ -25,29 +25,33 @@
                 <span class="material-icons">menu</span> </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="principal.html"><span
-                                class="material-icons">home</span>Início</a></li>
-                    <li class="nav-item"><a class="nav-link" href="galeria.html"><span
-                                class="material-icons">photo_library</span>Galeria</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contato.html"><span
-                                class="material-icons">contact_mail</span>Contato</a></li>
-                    <li class="nav-item"><a class="nav-link" href="agendamento.html"><span
-                                class="material-icons">event</span>Agendamento</a></li>
-                    <li class="nav-item"><a class="nav-link" href="login.html"><span
-                                class="material-icons">login</span>Login</a></li>
+                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="principal.html">Início</a></li>
+                    <li class="nav-item"><a class="nav-link" href="galeria.html">Galeria</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contato.html">Contato</a></li>
+                    <li class="nav-item"><a class="nav-link" href="agendamento.html">Agendamento</a></li>
+                    <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
                 </ul>
             </div>
         </div>
     </nav>
-    <main class="container my-4">
-        <section class="hero-section">
+    <main>
+        <section class="hero-section container my-4">
         <div class="container text-center">
             <h2 class="display-1">Clínica F&G</h2>
             <p>Nossa equipe de profissionais altamente qualificados está pronta para oferecer o melhor atendimento, 
                 com um ambiente acolhedor e equipamentos de última geração.</p>
         </div>
-    </section>
-
+        </section>
+        <div class="text-center divisao">
+            <h2>Nossas Histórias</h2>
+        </div>
+        <section class="hero-section container my-4">
+            <div class="container text-center">
+                <h2 class="display-1">Clínica F&G</h2>
+                <p>Nossa equipe de profissionais altamente qualificados está pronta para oferecer o melhor atendimento,
+                    com um ambiente acolhedor e equipamentos de última geração.</p>
+            </div>
+        </section>
     </main>
     <footer class="footer-clinica text-center">
         <div class="container">
