[Add] Primeiro commit

--- a/index2.html
+++ b/index2.html
@@ -37,14 +37,49 @@
     <main>
         <section class="hero-section container my-4">
         <div class="container text-center">
-            <h2 class="display-1">Clínica F&G</h2>
-            <p>Nossa equipe de profissionais altamente qualificados está pronta para oferecer o melhor atendimento, 
-                com um ambiente acolhedor e equipamentos de última geração.</p>
+            <img src="images/logo-sem-fundo.png" alt="logo-clinica" class="logo-clinica">
         </div>
         </section>
         <div class="divisao">
             <h1>Nossos Serviços</h1>
         </div>
+        <section class="nossos-servicos-section">
+            <div class="services-container">
+                <div class="service-card">
+                    <h3>Consultas Médicas Especializadas</h3>
+                    <p>Oferecemos consultas com diversas especialidades médicas, como Clínica Geral e entre outras</p>
+                </div>
+
+                <div class="service-card">
+                    <h3>Exames Laboratoriais e de Imagem</h3>
+                    <p>Disponibilizamos uma ampla gama de exames, incluindo análises clínicas e exames de imagem</p>
+                </div>
+
+                <div class="service-card">
+                    <h3>Vacinação</h3>
+                    <p>Realizamos a aplicação de vacinas para todas as idades, seguindo o calendário de imunização recomendado pelas autoridades de saúde.</p>
+                </div>
+
+            </div>
+            <div class="services-container">
+                <div class="service-card">
+                    <h3>Procedimentos Cirúrgicos</h3>
+                    <p>Contamos com estrutura para a realização de pequenos procedimentos ambulatoriais e realização de curativos.</p>
+                </div>
+
+                <div class="service-card">
+                    <h3>Atendimento de Urgência</h3>
+                    <p>Oferecemos atendimento para casos de urgência que não representam risco iminente de vida, como febre alta, dores agudas, pequenos traumas e infecções.</p>
+                </div>
+
+                <div class="service-card">
+                    <h3>Programas de Saúde Preventiva</h3>
+                    <p>Desenvolvemos programas de acompanhamento e check-ups personalizados para a promoção da saúde e prevenção de doenças.</p>
+                </div>
+
+            </div>
+        </section>
+
         <section class="nossos-servicos-section">
             <div class="services-container">
                 <div class="service-card">
