[Add] Primeiro commit

--- a/index2.html
+++ b/index2.html
@@ -11,13 +11,15 @@
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-lg navbar-clinica sticky-top">
     <header class="head-top">
         <div class="flex gap-4 head-top-central items-center">
             <h3 class="text head-top-label is-sm is-left is-normal">Central de atendimento: (34) 3232-3232</h3>
         </div>
     </header>
 
-    <nav class="navbar navbar-expand-lg navbar-clinica sticky-top">
+
+
         <div class="container">
             <img src="images/logonav.png" alt="Logo da Clínica F&G" class="logo-clinica" href="index2.html">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -35,87 +37,80 @@
         </div>
     </nav>
     <main>
-        <section class="hero-section container my-4">
+        <section class="hero-section my-4">
         <div class="container text-center">
             <img src="images/logo-sem-fundo.png" alt="logo-clinica" class="logo-clinica">
         </div>
         </section>
-        <div class="divisao">
+
+        <section class="nossos-servicos-section">
             <h1>Nossos Serviços</h1>
+            <div class="services-container">
+                <div class="service-card">
+                    <h3>Consultas Médicas Especializadas</h3>
+                    <p>Oferecemos consultas com diversas especialidades médicas, como Clínica Geral e entre outras</p>
+                </div>
+
+                <div class="service-card">
+                    <h3>Exames Laboratoriais e de Imagem</h3>
+                    <p>Disponibilizamos uma ampla gama de exames, incluindo análises clínicas e exames de imagem</p>
+                </div>
+
+                <div class="service-card">
+                    <h3>Vacinação</h3>
+                    <p>Realizamos a aplicação de vacinas para todas as idades, seguindo o calendário de imunização recomendado pelas autoridades de saúde.</p>
+                </div>
+
+            </div>
+            <div class="services-container">
+                <div class="service-card">
+                    <h3>Procedimentos Cirúrgicos</h3>
+                    <p>Contamos com estrutura para a realização de pequenos procedimentos ambulatoriais e realização de curativos.</p>
+                </div>
+
+                <div class="service-card">
+                    <h3>Atendimento de Urgência</h3>
+                    <p>Oferecemos atendimento para casos de urgência que não representam risco iminente de vida, como febre alta, dores agudas, pequenos traumas e infecções.</p>
+                </div>
+
+                <div class="service-card">
+                    <h3>Programas de Saúde Preventiva</h3>
+                    <p>Desenvolvemos programas de acompanhamento e check-ups personalizados para a promoção da saúde e prevenção de doenças.</p>
+                </div>
+
+            </div>
+        </section>
+
+        <div class="main-content-area">
+
+
+            <section class="destaques-section">
+                <div class="destaques-container">
+                    <h2>Destaques</h2>
+                    <p>Pensando na melhoria, o Complexo UMC liderança e oferece o que há de mais tecnológico, moderno e inovador para cuidar de sua saúde, com profissionais especializados em diferentes áreas.</p>
+
+
+                    <div class="cards-wrapper">
+                        <div class="card">
+                            <div class="card-icon checkup-icon"></div>
+                            <h3>Check-up Executivo</h3>
+                            <p>Que tal realizar um Check-up completo que te ajuda a agir de forma preventiva para manter a sua saúde em dia? Conheça mais sobre nosso Check-up Executivo.</p>
+                            <a href="#" class="card-link">→</a>
+                        </div>
+
+                        <div class="card">
+                            <div class="card-icon cirurgia-icon"></div>
+                            <h3>Cirurgia robótica</h3>
+                            <p>Entenda sobre a técnica mais moderna em procedimentos minimamente invasivos, oferecidos no UMC.</p>
+                            <a href="#" class="card-link">→</a>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <div class="image-column">
+                <img src="images/doutor.png" alt="Médica sorrindo" class="left-image">
+            </div>
         </div>
-        <section class="nossos-servicos-section">
-            <div class="services-container">
-                <div class="service-card">
-                    <h3>Consultas Médicas Especializadas</h3>
-                    <p>Oferecemos consultas com diversas especialidades médicas, como Clínica Geral e entre outras</p>
-                </div>
-
-                <div class="service-card">
-                    <h3>Exames Laboratoriais e de Imagem</h3>
-                    <p>Disponibilizamos uma ampla gama de exames, incluindo análises clínicas e exames de imagem</p>
-                </div>
-
-                <div class="service-card">
-                    <h3>Vacinação</h3>
-                    <p>Realizamos a aplicação de vacinas para todas as idades, seguindo o calendário de imunização recomendado pelas autoridades de saúde.</p>
-                </div>
-
-            </div>
-            <div class="services-container">
-                <div class="service-card">
-                    <h3>Procedimentos Cirúrgicos</h3>
-                    <p>Contamos com estrutura para a realização de pequenos procedimentos ambulatoriais e realização de curativos.</p>
-                </div>
-
-                <div class="service-card">
-                    <h3>Atendimento de Urgência</h3>
-                    <p>Oferecemos atendimento para casos de urgência que não representam risco iminente de vida, como febre alta, dores agudas, pequenos traumas e infecções.</p>
-                </div>
-
-                <div class="service-card">
-                    <h3>Programas de Saúde Preventiva</h3>
-                    <p>Desenvolvemos programas de acompanhamento e check-ups personalizados para a promoção da saúde e prevenção de doenças.</p>
-                </div>
-
-            </div>
-        </section>
-
-        <section class="nossos-servicos-section">
-            <div class="services-container">
-                <div class="service-card">
-                    <h3>Consultas Médicas Especializadas</h3>
-                    <p>Oferecemos consultas com diversas especialidades médicas, como Clínica Geral e entre outras</p>
-                </div>
-
-                <div class="service-card">
-                    <h3>Exames Laboratoriais e de Imagem</h3>
-                    <p>Disponibilizamos uma ampla gama de exames, incluindo análises clínicas e exames de imagem</p>
-                </div>
-
-                <div class="service-card">
-                    <h3>Vacinação</h3>
-                    <p>Realizamos a aplicação de vacinas para todas as idades, seguindo o calendário de imunização recomendado pelas autoridades de saúde.</p>
-                </div>
-
-            </div>
-            <div class="services-container">
-                <div class="service-card">
-                    <h3>Procedimentos Cirúrgicos</h3>
-                    <p>Contamos com estrutura para a realização de pequenos procedimentos ambulatoriais e realização de curativos.</p>
-                </div>
-
-                <div class="service-card">
-                    <h3>Atendimento de Urgência</h3>
-                    <p>Oferecemos atendimento para casos de urgência que não representam risco iminente de vida, como febre alta, dores agudas, pequenos traumas e infecções.</p>
-                </div>
-
-                <div class="service-card">
-                    <h3>Programas de Saúde Preventiva</h3>
-                    <p>Desenvolvemos programas de acompanhamento e check-ups personalizados para a promoção da saúde e prevenção de doenças.</p>
-                </div>
-
-            </div>
-        </section>
     </main>
     <footer class="footer-clinica text-center">
         <div class="container">
