--- a/galeria.html
+++ b/galeria.html
@@ -1,80 +1,86 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Clínica Médica - Galeria</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style_galerias.css">
 </head>
+
 <body>
-<header class="bg-primary text-white p-3">
-    <div class="container">
-        <h1>Clínica Saúde & Bem-Estar</h1>
+
+    <div>
+        <h3 class="central">Central de Atendimento: (34) 3232-3232</h3>
     </div>
-</header>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link" href="principal.html">Home</a></li>
+
+    <nav class="navbar-custom">
+        <div class="container">
+
+            <a href="index2.html" class="navbar-logo">
+                <img src="images/logonav.png" alt="Logo da Clínica">
+            </a>
+
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <ul class="collapse navbar-nav-custom" id="navbarNav">
+                <li class="nav-item"><a class="nav-link" href="index2.html">Home</a></li>
                 <li class="nav-item"><a class="nav-link active" aria-current="page" href="galeria.html">Galeria</a></li>
                 <li class="nav-item"><a class="nav-link" href="contato.html">Contato</a></li>
                 <li class="nav-item"><a class="nav-link" href="agendamento.html">Agendamento</a></li>
                 <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
             </ul>
+
         </div>
-    </div>
-</nav>
-<main class="container my-4">
-    <h2>Nossa Galeria de Fotos</h2>
-    <div class="row">
-        <div class="col-md-4 mb-4">
-            <figure class="figure">
-                <img src="https://via.placeholder.com/400x300?text=Sala+de+Espera" class="figure-img img-fluid rounded" alt="Sala de espera da clínica.">
-                <figcaption class="figure-caption text-center">Sala de Espera</figcaption>
-            </figure>
+    </nav>
+
+    <main class="container my-4">
+        <h1 class="titulo-galeria">Galeria F&G</h1>
+        <p>Aqui você pode ver imagens da nossa infraestrutura e instalações.</p>
+        <p>Confira abaixo algumas fotos da nossa clínica:</p>
+        <table class="tabela">
+            <tbody>
+                <tr>
+                    <td>
+                        <a href="images/fachada.png" target="_blank">
+                            <img src="images/fachada.png" alt="Fachada da Clínica" class="img-fluid rounded ">
+                        </a>
+                    </td>
+                    <td><a href="images/estacionamento.png" target="_blank">
+                            <img src="images/estacionamento.png" alt="Estacionamento da Clínica"
+                                class="img-fluid rounded ">
+                        </a></td>
+                </tr>
+                <tr>
+                    </a></td>
+                    <td><a href="images/clinica.png" target="_blank">
+                            <img src="images/clinica.png" alt="Clínica" class="img-fluid rounded ">
+                        </a></td>
+                    </a></td>
+                    <td><a href="images/atendimento.png" target="_blank">
+                            <img src="images/atendimento.png" alt="atendimento da Clínica" class="img-fluid rounded ">
+                        </a></td>
+                </tr>
+            </tbody>
+        </table>
+
+        <h2 class="titulo-galeria">Nossa Localização</h2>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d691705.2849035033!2d-69.30782986881658!3d-23.925352377177177!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x96af46527fef1c47%3A0x34dbbb7aa8223dc!2sAtacama%20Desert!5e1!3m2!1sen!2sbr!4v1753902396561!5m2!1sen!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+
+    </main>
+
+    <footer class=" text-white text-center p-3">
+        <div class="container">
+            <p>&copy; 2025 - Clínica F&G. Todos os direitos reservados.</p>
         </div>
-        <div class="col-md-4 mb-4">
-            <figure class="figure">
-                <img src="https://via.placeholder.com/400x300?text=Consultorio+1" class="figure-img img-fluid rounded" alt="Consultório médico 1.">
-                <figcaption class="figure-caption text-center">Consultório 1</figcaption>
-            </figure>
-        </div>
-        <div class="col-md-4 mb-4">
-            <figure class="figure">
-                <img src="https://via.placeholder.com/400x300?text=Recepcao" class="figure-img img-fluid rounded" alt="Recepção da clínica.">
-                <figcaption class="figure-caption text-center">Recepção</figcaption>
-            </figure>
-        </div>
-        <div class="col-md-4 mb-4">
-            <figure class="figure">
-                <img src="https://via.placeholder.com/400x300?text=Consultorio+2" class="figure-img img-fluid rounded" alt="Consultório médico 2.">
-                <figcaption class="figure-caption text-center">Consultório 2</figcaption>
-            </figure>
-        </div>
-        <div class="col-md-4 mb-4">
-            <figure class="figure">
-                <img src="https://via.placeholder.com/400x300?text=Laboratorio" class="figure-img img-fluid rounded" alt="Área de laboratório da clínica.">
-                <figcaption class="figure-caption text-center">Laboratório</figcaption>
-            </figure>
-        </div>
-        <div class="col-md-4 mb-4">
-            <figure class="figure">
-                <img src="https://via.placeholder.com/400x300?text=Fachada" class="figure-img img-fluid rounded" alt="Fachada da clínica.">
-                <figcaption class="figure-caption text-center">Fachada da Clínica</figcaption>
-            </figure>
-        </div>
-    </div>
-</main>
-<footer class="bg-dark text-white text-center p-3">
-    <div class="container">
-        <p>&copy; 2024 Clínica Saúde & Bem-Estar. Todos os direitos reservados.</p>
-    </div>
-</footer>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
