--- a/galeria.html
+++ b/galeria.html
@@ -69,7 +69,7 @@
         </table>
 
         <h2 class="titulo-galeria">Nossa Localização</h2>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d691705.2849035033!2d-69.30782986881658!3d-23.925352377177177!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x96af46527fef1c47%3A0x34dbbb7aa8223dc!2sAtacama%20Desert!5e1!3m2!1sen!2sbr!4v1753902396561!5m2!1sen!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d691705.2849035033!2d-69.30782986881658!3d-23.925352377177177!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x96af46527fef1c47%3A0x34dbbb7aa8223dc!2sAtacama%20Desert!5e1!3m2!1sen!2sbr!4v1753902396561!5m2!1sen!2sbr" style="border-radius:15px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
 
     </main>
