--- a/contato.html
+++ b/contato.html
@@ -1,72 +1,86 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Clínica Médica - Contato</title>
+    <title>Clínica F&G - Galeria</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style_contato.css">
 </head>
+
 <body>
-<header class="bg-primary text-white p-3">
-    <div class="container">
-        <h1>Clínica Saúde & Bem-Estar</h1>
+
+    <div>
+        <h3 class="central">Central de Atendimento: (34) 3232-3232</h3>
     </div>
-</header>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link" href="principal.html">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="galeria.html">Galeria</a></li>
-                <li class="nav-item"><a class="nav-link active" aria-current="page" href="contato.html">Contato</a></li>
+
+    <nav class="navbar-custom">
+        <div class="container">
+
+            <a href="index2.html" class="navbar-logo">
+                <img src="images/logonav.png" alt="Logo da Clínica">
+            </a>
+
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <ul class="collapse navbar-nav-custom" id="navbarNav">
+                <li class="nav-item"><a class="nav-link" href="index2.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link" aria-current="page" href="galeria.html">Galeria</a></li>
+                <li class="nav-item"><a class="nav-link active" href="contato.html">Contato</a></li>
                 <li class="nav-item"><a class="nav-link" href="agendamento.html">Agendamento</a></li>
                 <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
             </ul>
+
         </div>
-    </div>
-</nav>
-<main class="container my-4">
-    <h2>Entre em Contato</h2>
-    <p>Envie-nos suas dúvidas, sugestões ou reclamações através do formulário abaixo. Responderemos o mais breve possível.</p>
-    <form>
-        <div class="mb-3">
-            <label for="name" class="form-label">Nome:</label>
-            <input type="text" class="form-control" id="name" name="name" required>
+    </nav>
+
+    <main class="container my-4">
+        <h2>Entre em Contato</h2>
+        <p>Envie-nos suas dúvidas, sugestões ou reclamações através do formulário abaixo. Responderemos o mais breve
+            possível.</p>
+        <form>
+            <div class="mb-3">
+                <label for="name" class="form-label">Nome:</label>
+                <input type="text" class="form-control" id="name" name="name" required>
+            </div>
+            <div class="mb-3">
+                <label for="email" class="form-label">Email:</label>
+                <input type="email" class="form-control" id="email" name="email" required>
+            </div>
+            <div class="mb-3">
+                <label for="subject" class="form-label">Assunto:</label>
+                <input type="text" class="form-control" id="subject" name="subject">
+            </div>
+            <div class="mb-3">
+                <label for="message" class="form-label">Mensagem:</label>
+                <textarea class="form-control" id="message" name="message" rows="5" required></textarea>
+            </div>
+            <button type="submit" class="botao-submit">Enviar Mensagem</button>
+        </form>
+
+
+
+        <hr class="my-4">
+        <h3>Informações de Contato</h3>
+        <address>
+            Clínica F&G
+            Rua da Saúde, 1234
+            Bairro Central, Uberlândia - MG
+            CEP: 38400-000
+            Telefone: <a href="tel:+55343232-3232">(34) 3232-3232</a>
+            Email: <a href="mailto:contato@clinica.com">contato@fg.com</a>
+        </address>
+    </main>
+    <footer class=" text-white text-center p-3">
+        <div class="container">
+            <p>&copy; 2025 - Clínica F&G. Todos os direitos reservados.</p>
         </div>
-        <div class="mb-3">
-            <label for="email" class="form-label">Email:</label>
-            <input type="email" class="form-control" id="email" name="email" required>
-        </div>
-        <div class="mb-3">
-            <label for="subject" class="form-label">Assunto:</label>
-            <input type="text" class="form-control" id="subject" name="subject">
-        </div>
-        <div class="mb-3">
-            <label for="message" class="form-label">Mensagem:</label>
-            <textarea class="form-control" id="message" name="message" rows="5" required></textarea>
-        </div>
-        <button type="submit" class="btn btn-primary">Enviar Mensagem</button>
-    </form>
-    <hr class="my-4">
-    <h3>Informações de Contato</h3>
-    <address>
-        **Clínica Saúde & Bem-Estar**<br>
-        Rua da Saúde, 1234<br>
-        Bairro Central, Uberlândia - MG<br>
-        CEP: 38400-000<br>
-        Telefone: <a href="tel:+553433334444">(34) 3333-4444</a><br> [cite: 810]
-        Email: <a href="mailto:contato@clinica.com">contato@clinica.com</a> [cite: 806]
-    </address>
-</main>
-<footer class="bg-dark text-white text-center p-3">
-    <div class="container">
-        <p>&copy; 2024 Clínica Saúde & Bem-Estar. Todos os direitos reservados.</p>
-    </div>
-</footer>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
