[Add] Ajustado home

--- a/contato.html
+++ b/contato.html
@@ -18,7 +18,7 @@
     <nav class="navbar-custom">
         <div class="container">
 
-            <a href="index2.html" class="navbar-logo">
+            <a href="index.html" class="navbar-logo">
                 <img src="images/logonav.png" alt="Logo da Clínica">
             </a>
 
@@ -28,7 +28,7 @@
             </button>
 
             <ul class="collapse navbar-nav-custom" id="navbarNav">
-                <li class="nav-item"><a class="nav-link" href="index2.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                 <li class="nav-item"><a class="nav-link" aria-current="page" href="galeria.html">Galeria</a></li>
                 <li class="nav-item"><a class="nav-link active" href="contato.html">Contato</a></li>
                 <li class="nav-item"><a class="nav-link" href="agendamento.html">Agendamento</a></li>
