--- a/index.html
+++ b/index.html
@@ -1,75 +1,64 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Clínica Médica - Home</title>
+    <title>Clínica F&G - Galeria</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-<header class="bg-primary text-white p-3">
+
+<div>
+    <h3 class="central">Central de Atendimento: (34) 3232-3232</h3>
+</div>
+
+<nav class="navbar-custom">
     <div class="container">
-        <h1>Clínica Saúde & Bem-Estar</h1>
-    </div>
-</header>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+
+        <a href="index.html" class="navbar-logo">
+            <img src="images/logo-sem-fundo.png" alt="Logo da Clínica">
+        </a>
+
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="galeria.html">Galeria</a></li>
-                <li class="nav-item"><a class="nav-link" href="contato.html">Contato</a></li>
-                <li class="nav-item"><a class="nav-link" href="agendamento.html">Agendamento</a></li>
-                <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
-            </ul>
-        </div>
+
+        <ul class="collapse navbar-nav-custom" id="navbarNav">
+            <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link" aria-current="page" href="galeria.html">Galeria</a></li>
+            <li class="nav-item"><a class="nav-link" href="contato.html">Contato</a></li>
+            <li class="nav-item"><a class="nav-link" href="agendamento.html">Agendamento</a></li>
+            <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
+        </ul>
+
     </div>
 </nav>
-<main class="container my-4">
-    <section class="mb-4">
-        <h2>Bem-vindo à Clínica Saúde & Bem-Estar</h2>
-        <p class="lead">Cuidamos da sua saúde com dedicação e excelência. Nossa clínica oferece uma ampla gama de serviços médicos para atender às suas necessidades.</p>
-        <p>Nossa equipe de profissionais altamente qualificados está pronta para oferecer o melhor atendimento, com um ambiente acolhedor e equipamentos de última geração.</p>
-    </section>
-    <section>
-        <h3>Nossos Serviços</h3>
-        <div class="row">
-            <div class="col-md-4 mb-3">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">Clínica Geral</h5>
-                        <p class="card-text">Consultas de rotina e acompanhamento da saúde.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 mb-3">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">Pediatria</h5>
-                        <p class="card-text">Cuidado especializado para a saúde das crianças.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 mb-3">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">Dermatologia</h5>
-                        <p class="card-text">Tratamento e prevenção de doenças de pele.</p>
-                    </div>
-                </div>
-            </div>
+
+<main>
+    <div class="principal">
+        <img src="images/clinica-background.png">
+        <div class="legenda">
+            <h1>Clinica F&G</h1>
+            <h3>A clínica da sua família</h3>
         </div>
-    </section>
+
+    </div>
+    <div>
+
+    </div>
 </main>
-<footer class="bg-dark text-white text-center p-3">
+
+<footer class=" text-white text-center p-3">
     <div class="container">
-        <p>&copy; 2024 Clínica Saúde & Bem-Estar. Todos os direitos reservados.</p>
+        <p>&copy; 2025 - Clínica F&G. Todos os direitos reservados.</p>
     </div>
 </footer>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
