--- a/estrutura interna/cadastrar-funcionario.html
+++ b/estrutura interna/cadastrar-funcionario.html
@@ -3,7 +3,9 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Cadastrar Funcionário</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="estilo-restrito.css">
 </head>
 
@@ -24,9 +26,58 @@
 
   <main class="container mt-4">
     <h2>Cadastrar Funcionário</h2>
-    <p>Conteúdo da página Cadastrar Funcionário.</p>
+    <p>Formulário para cadastro de novos funcionários (exceto médicos) da clínica:</p>
+    <form class="formulario-cadastro" method="post">
+      <div class="form-group">
+        <label for="nome">Nome completo:</label>
+        <input type="text" id="nome" name="nome" class="form-control" required>
+      </div>
+
+      <div class="form-group">
+        <label for="cpf">CPF:</label>
+        <input type="text" id="cpf" name="cpf" class="form-control" placeholder="000.000.000-00" required
+          pattern="\d{3}\.\d{3}\.\d{3}-\d{2}">
+      </div>
+
+      <div class="form-group">
+        <label for="cargo">Cargo:</label>
+        <input type="text" id="cargo" name="cargo" class="form-control" required>
+      </div>
+
+      <div class="form-group">
+        <label for="telefone">Telefone:</label>
+        <input type="tel" id="telefone" name="telefone" class="form-control" placeholder="+55 (XX) X XXXX-XXXX" required>
+      </div>
+
+      <div class="form-group">
+        <label for="email">E-mail institucional:</label>
+        <input type="email" id="email" name="email" class="form-control" placeholder="@clinicasfeg.com.br" required>
+      </div>
+
+      <div class="text-center mt-3">
+        <button type="submit" class="btn btn-primary">Salvar Funcionário</button>
+      </div>
+    </form>
   </main>
-  <footer class="bg-light text-center p-3 mt-4">
+  <script>
+    document.addEventListener("DOMContentLoaded", function () {
+      const cpfInput = document.getElementById("cpf");
+
+      cpfInput.addEventListener("input", function (e) {
+        let value = cpfInput.value.replace(/\D/g, '');
+
+        if (value.length > 11) value = value.slice(0, 11);
+
+        value = value.replace(/(\d{3})(\d)/, "$1.$2");
+        value = value.replace(/(\d{3})(\d)/, "$1.$2");
+        value = value.replace(/(\d{3})(\d{1,2})$/, "$1-$2");
+
+        cpfInput.value = value;
+      });
+    });
+  </script>
+
+  <footer>
     <small>© Clínica Médica - Sistema Interno</small>
   </footer>
 </body>
