--- a/estrutura interna/cadastrar-medico.html
+++ b/estrutura interna/cadastrar-medico.html
@@ -3,7 +3,9 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Cadastrar Médico</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="estilo-restrito.css">
 </head>
 
@@ -24,7 +26,37 @@
 
   <main class="container mt-4">
     <h2>Cadastrar Médico</h2>
-    <p>Conteúdo da página Cadastrar Médico.</p>
+    <p>Formulário para cadastro de novos médicos da clínica:</p>
+    <form class="formulario-cadastro" method="post">
+      <div class="form-group">
+        <label for="nome">Nome completo:</label>
+        <input type="text" id="nome" name="nome" class="form-control" required>
+      </div>
+
+      <div class="form-group">
+        <label for="crm">CRM:</label>
+        <input type="text" id="crm" name="crm" class="form-control" placeholder="CRM/XX-000000" required>
+      </div>
+
+      <div class="form-group">
+        <label for="especialidade">Especialidade:</label>
+        <input type="text" id="especialidade" name="especialidade" class="form-control" required>
+      </div>
+
+      <div class="form-group">
+        <label for="telefone">Telefone:</label>
+        <input type="tel" id="telefone" name="telefone" class="form-control" placeholder="+55 (XX) X XXXX-XXXX" required>
+      </div>
+
+      <div class="form-group">
+        <label for="email">E-mail institucional:</label>
+        <input type="email" id="email" name="email" class="form-control" placeholder="@clinicasfeg.com.br" required>
+      </div>
+
+      <div class="text-center mt-3">
+        <button type="submit" class="btn btn-primary">Salvar Médico</button>
+      </div>
+    </form>
   </main>
   <footer class="bg-light text-center p-3 mt-4">
     <small>© Clínica Médica - Sistema Interno</small>
