--- a/estrutura interna/index.html
+++ b/estrutura interna/index.html
@@ -3,7 +3,9 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Início</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="estilo-restrito.css">
 </head>
 
@@ -22,14 +24,47 @@
     <a class="nav-link" href="listar-contatos.html">Mensagens</a>
   </nav>
 
-  <main class="container mt-4">
+  <main class="container">
     <h2>Início</h2>
-    <p>Conteúdo da página Início.</p>
+    <p class="mb-4">Bem-vindos ao sistema de gestão da clínica F&G, este painelé exclusivo para a equipe da clínica.
+      Utilize os menus acima para gerenciar cadastros, agendas e mensagens dos pacientes, ou selecione abaixo o que você
+      deseja fazer.</p>
+    <div>
+      <div class=" mb-4">
+        <div class="p-3 border rounded bg-white h-100">
+          <h5>📋 Cadastros</h5>
+          <p>Cadastre novos <strong><a href="cadastrar-funcionario.html"
+                class="botao_escondido">funcionários</a></strong> e <strong><a href="cadastrar-medico.html"
+                class="botao_escondido">médicos</a></strong> através dos links do menu ou clicando nas palavras em
+            negrito.</p>
+        </div>
+      </div>
+      <div class="mb-4">
+        <div class="p-3 border rounded bg-white h-100">
+          <h5>📑 Consultas de colaboradores</h5>
+          <p>Consulte <strong><a href="listar-funcionarios.html" class="botao_escondido">funcionários</a></strong> e <strong><a href="listar-medicos.html" class="botao_escondido">médicos</a></strong> através dos links do menu
+            ou clicando nas palavras em negrito.
+          </p>
+        </div>
+      </div>
+      <div class=" mb-4">
+        <div class="p-3 border rounded bg-white h-100">
+          <h5>💬 Agendas e mensagens</h5>
+          <p>Consulte <strong><a href="listar-agendamentos.html" class="botao_escondido">agendas</a></strong> dos
+            médicos e
+            <strong><a href="listar-contatos.html" class="botao_escondido">mensagens</a></strong> enviadas pelos
+            pacientes através dos links do menu
+            ou clicando nas palavras em negrito.
+          </p>
+        </div>
+      </div>
+    </div>
   </main>
 
-  <footer class="bg-light text-center p-3 mt-4">
+  <footer>
     <small>© Clínica Médica - Sistema Interno</small>
   </footer>
+
 </body>
 
 </html>
