--- a/estrutura interna/listar-medicos.html
+++ b/estrutura interna/listar-medicos.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Listar Médicos</title>
   <link rel="stylesheet" href="estilo-restrito.css">
 </head>
