--- a/contato.html
+++ b/contato.html
@@ -19,7 +19,7 @@
         <div class="container">
 
             <a href="index.html" class="navbar-logo">
-                <img src="images/logonav.png" alt="Logo da Clínica">
+                <img src="images/logo-sem-fundo.png" alt="Logo da Clínica">
             </a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
