[Add] Final Home

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
     </div>
     <div class="cards-container">
         <div class="header">
-            <p class="subtitle">NA CLINICA F&G</p>
-            <h1 class="title">Desenvolvemos produtos e inovação para:</h1>
+            <p class="subtitulo">NA CLÍNICA F&G</p>
+            <h1 class="titulo">Desenvolvemos produtos e inovação para:</h1>
         </div>
         <div class="cards-wrapper">
             <div class="card">
@@ -80,34 +80,69 @@
     </div>
     <div class="cards-container2">
         <div class="header">
-            <p class="subtitle">Portfólio</p>
-            <h1 class="title">Nossos produtos:</h1>
+            <p class="subtitulo">Portfólio</p>
+            <h1 class="titulo">Nossos produtos:</h1>
         </div>
         <div class="cards-wrapper">
             <div class="card">
                 <div class="card-image-container">
-                    <img src="images/card1.jpg" alt="Doctor examining a pregnant woman">
+                    <img src="images/card6.jpg" alt="Manipulação medicamentos">
                 </div>
                 <div class="card-content">
-                    <p>Facilitar o acompanhamento preciso e correto do desenvolvimento do feto e da saúde da mãe</p>
+                    <h3>Manipulação de Medicamentos</h3>
                 </div>
             </div>
 
             <div class="card">
                 <div class="card-image-container">
-                    <img src="images/card2.jpg" alt="Pregnant woman relaxing on a couch">
+                    <img src="images/card4.jpg" alt="Tecnologia na estética">
                 </div>
                 <div class="card-content">
-                    <p>Humanizar o cuidado com a gestante e valorizar cada momento da vivência da gestação</p>
+                    <h3>Criofrequência</h3>
                 </div>
             </div>
             <div class="card">
                 <div class="card-image-container">
-                    <img src="images/card3.avif" alt="Woman with a baby looking at a laptop">
+                    <img src="images/card5.jpeg" alt="Ultrassonografia 6d">
                 </div>
                 <div class="card-content">
-                    <p>Popularizar o acesso a um acompanhamento gestacional de qualidade.</p>
+                    <h3>Ultrassonografia 5D</h3>
                 </div>
+            </div>
+        </div>
+    </div>
+    <div class="duvidas-container">
+        <h2 class="duvidas-title">Dúvidas frequentes</h2>
+        <div class="duvidas-item">
+            <div class="duvidas-question">
+                O que é o Clínica F&G?
+                <span class="arrow">&#9660;</span>
+            </div>
+            <div class="duvidas-answer">
+            </div>
+        </div>
+        <div class="duvidas-item">
+            <div class="duvidas-question">
+                Quais especialidades médicas estão disponíveis na Clínica F&G?
+                <span class="arrow">&#9660;</span>
+            </div>
+            <div class="duvidas-answer">
+            </div>
+        </div>
+        <div class="duvidas-item">
+            <div class="duvidas-question">
+                A Clínica F&G aceita planos de saúde?
+                <span class="arrow">&#9660;</span>
+            </div>
+            <div class="duvidas-answer">
+            </div>
+        </div>
+        <div class="duvidas-item">
+            <div class="duvidas-question">
+                Posso realizar exames na Clínica F&G?
+                <span class="arrow">&#9660;</span>
+            </div>
+            <div class="duvidas-answer">
             </div>
         </div>
     </div>
