--- a/estrutura interna/listar-agendamentos.html
+++ b/estrutura interna/listar-agendamentos.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Listar Agendamentos</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="estilo-restrito.css">
 </head>
 
@@ -24,8 +25,42 @@
   </nav>
 
   <main class="container mt-4">
-    <h2>Listar Agendamentos</h2>
-    <p>Conteúdo da página Listar Agendamentos.</p>
+    <h2 class="text-center mb-4">Agendamentos Realizados</h2>
+
+    <table class="tabela">
+      <thead>
+        <tr>
+          <th>Nome completo</th>
+          <th>Telefone / E-mail</th>
+          <th>Data preferencial</th>
+          <th>Hora preferencial</th>
+          <th>Especialidade</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Lucas Almeida</td>
+          <td>(34) 99888-7766</td>
+          <td>05/08/2025</td>
+          <td>10:30</td>
+          <td>Pediatra</td>
+        </tr>
+        <tr>
+          <td>Marina Lopes</td>
+          <td>marina@email.com</td>
+          <td>06/08/2025</td>
+          <td>09:00</td>
+          <td>Cardiologista</td>
+        </tr>
+        <tr>
+          <td>João Silva</td>
+          <td>joaopedro@email.com</td>
+          <td>07/08/2025</td>
+          <td>15:00</td>
+          <td>Dermatologista</td>
+        </tr>
+      </tbody>
+    </table>
   </main>
   <footer class="bg-light text-center p-3 mt-4">
     <small>© Clínica Médica - Sistema Interno</small>
