--- a/estrutura interna/listar-contatos.html
+++ b/estrutura interna/listar-contatos.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Listar Mensagens de Contato</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="estilo-restrito.css">
 </head>
 
@@ -24,8 +25,38 @@
   </nav>
 
   <main class="container mt-4">
-    <h2>Listar Mensagens de Contato</h2>
-    <p>Conteúdo da página Listar Mensagens de Contato.</p>
+    <h2 class="text-center mb-4">Mensagens de Contato</h2>
+
+    <table class="tabela">
+      <thead>
+        <tr>
+          <th>Nome</th>
+          <th>E-mail</th>
+          <th>Assunto</th>
+          <th>Mensagem</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Fernanda Lima</td>
+          <td>fernanda@email.com</td>
+          <td>Dúvida sobre agendamento</td>
+          <td>Gostaria de saber se posso remarcar minha consulta para outro horário.</td>
+        </tr>
+        <tr>
+          <td>Roberto Souza</td>
+          <td>roberto@email.com</td>
+          <td>Sugestão</td>
+          <td>Seria interessante disponibilizar um canal para atendimento via WhatsApp.</td>
+        </tr>
+        <tr>
+          <td>Paula Mendes</td>
+          <td>paula.mendes@email.com</td>
+          <td>Reclamação</td>
+          <td>Esperei muito tempo no atendimento da recepção. Sugiro melhorias.</td>
+        </tr>
+      </tbody>
+    </table>
   </main>
   <footer class="bg-light text-center p-3 mt-4">
     <small>© Clínica Médica - Sistema Interno</small>
