--- a/estrutura interna/listar-funcionarios.html
+++ b/estrutura interna/listar-funcionarios.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Listar Funcionários</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="estilo-restrito.css">
 </head>
 
@@ -24,8 +25,34 @@
   </nav>
 
   <main class="container mt-4">
-    <h2>Listar Funcionários</h2>
-    <p>Conteúdo da página Listar Funcionários.</p>
+    <h2 class="mb-4">Funcionários cadastrados</h2>
+    <table class="tabela">
+      <thead>
+        <tr>
+          <th>Nome</th>
+          <th>CPF</th>
+          <th>Cargo</th>
+          <th>Telefone</th>
+          <th>E-mail</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Maria Silva</td>
+          <td>123.456.789-00</td>
+          <td>Recepcionista</td>
+          <td>(34) 99999-1234</td>
+          <td>maria@clinicasfeg.com.br</td>
+        </tr>
+        <tr>
+          <td>João Oliveira</td>
+          <td>987.654.321-00</td>
+          <td>Auxiliar</td>
+          <td>(34) 98888-5678</td>
+          <td>joao@clinicasfeg.com.br</td>
+        </tr>
+      </tbody>
+    </table>
   </main>
   <footer class="bg-light text-center p-3 mt-4">
     <small>© Clínica Médica - Sistema Interno</small>
