--- a/estrutura interna/listar-medicos.html
+++ b/estrutura interna/listar-medicos.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Listar Médicos</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="estilo-restrito.css">
 </head>
 
@@ -23,8 +24,36 @@
     <a class="nav-link" href="listar-contatos.html">Mensagens</a>
   </nav>
   <main class="container mt-4">
-    <h2>Listar Médicos</h2>
-    <p>Conteúdo da página Listar Médicos.</p>
+    <h2 class="text-center mb-4">Médicos Cadastrados</h2>
+
+    <table class="tabela">
+      <thead>
+        <tr>
+          <th>Nome</th>
+          <th>CRM</th>
+          <th>Especialidade</th>
+          <th>Telefone</th>
+          <th>E-mail</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Dra. Ana Beatriz</td>
+          <td>123456-MG</td>
+          <td>Pediatria</td>
+          <td>(34) 99999-1111</td>
+          <td>ana@clinicasfeg.com.br</td>
+        </tr>
+        <tr>
+          <td>Dr. Rafael Costa</td>
+          <td>654321-MG</td>
+          <td>Cardiologia</td>
+          <td>(34) 98888-2222</td>
+          <td>rafael@clinicasfeg.com.br</td>
+        </tr>
+      </tbody>
+    </table>
+  </main>
   </main>
   <footer class="bg-light text-center p-3 mt-4">
     <small>© Clínica Médica - Sistema Interno</small>
