--- a/login.html
+++ b/login.html
@@ -1,57 +1,68 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Clínica Médica - Login</title>
+    <title>Clínica F&G - Login</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style_login.css">
 </head>
+
 <body>
-<header class="bg-primary text-white p-3">
-    <div class="container">
-        <h1>Clínica Saúde & Bem-Estar</h1>
+    <div>
+        <h3 class="central">Central de Atendimento: (34) 3232-3232</h3>
     </div>
-</header>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link" href="principal.html">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="galeria.html">Galeria</a></li>
+
+    <nav class="navbar-custom">
+        <div class="container">
+
+            <a href="index.html" class="navbar-logo">
+                <img src="images/logo-sem-fundo.png" alt="Logo da Clínica">
+            </a>
+
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <ul class="collapse navbar-nav-custom" id="navbarNav">
+                <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link " aria-current="page" href="galeria.html">Galeria</a></li>
                 <li class="nav-item"><a class="nav-link" href="contato.html">Contato</a></li>
                 <li class="nav-item"><a class="nav-link" href="agendamento.html">Agendamento</a></li>
-                <li class="nav-item"><a class="nav-link active" aria-current="page" href="login.html">Login</a></li>
+                <li class="nav-item"><a class="nav-link active" href="login.html">Login</a></li>
             </ul>
+
         </div>
-    </div>
-</nav>
-<main class="container my-4 d-flex justify-content-center">
-    <div class="card p-4 shadow-sm" style="max-width: 400px; width: 100%;">
-        <h2 class="card-title text-center mb-4">Login</h2>
-        <form>
-            <div class="mb-3">
-                <label for="username" class="form-label">Usuário ou Email:</label>
-                <input type="text" class="form-control" id="username" name="username" required>
-            </div>
-            <div class="mb-3">
-                <label for="password" class="form-label">Senha:</label>
-                <input type="password" class="form-control" id="password" name="password" required>
-            </div>
-            <div class="d-grid">
-                <button type="submit" class="btn btn-primary">Entrar</button>
-            </div>
-        </form>
-    </div>
-</main>
-<footer class="bg-dark text-white text-center p-3">
-    <div class="container">
-        <p>&copy; 2024 Clínica Saúde & Bem-Estar. Todos os direitos reservados.</p>
-    </div>
-</footer>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    </nav>
+
+    <main class="container">
+        <div class="card-login">
+            <h2>Login</h2>
+            <form>
+                <div class="mb-3">
+                    <label for="username" class="form-label">Usuário ou Email:</label>
+                    <input type="text" class="form-control" id="username" name="username" required>
+                </div>
+                <div class="mb-3">
+                    <label for="password" class="form-label">Senha:</label>
+                    <input type="password" class="form-control" id="password" name="password" required>
+                </div>
+                <div>
+                    <button type="submit" class="botao-login">Entrar</button>
+                </div>
+            </form>
+        </div>
+    </main>
+    
+    <footer class=" text-white text-center p-3">
+        <div class="container">
+            <p>&copy; 2025 - Clínica F&G. Todos os direitos reservados.</p>
+        </div>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
