--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Clínica F&G - Galeria</title>
+    <title>Clínica F&G - Index</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -115,7 +115,7 @@
         <h2 class="duvidas-title">Dúvidas frequentes</h2>
         <div class="duvidas-item">
             <div class="duvidas-question">
-                O que é o Clínica F&G?
+                O que é a Clínica F&G?
                 <span class="arrow">&#9660;</span>
             </div>
             <div class="duvidas-answer">
@@ -135,6 +135,7 @@
                 <span class="arrow">&#9660;</span>
             </div>
             <div class="duvidas-answer">
+                
             </div>
         </div>
         <div class="duvidas-item">
