--- a/estrutura interna/listar-agendamentos.html
+++ b/estrutura interna/listar-agendamentos.html
@@ -26,41 +26,42 @@
 
   <main class="container mt-4">
     <h2 class="text-center mb-4">Agendamentos Realizados</h2>
-
-    <table class="tabela">
-      <thead>
-        <tr>
-          <th>Nome completo</th>
-          <th>Telefone / E-mail</th>
-          <th>Data preferencial</th>
-          <th>Hora preferencial</th>
-          <th>Especialidade</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>Lucas Almeida</td>
-          <td>(34) 99888-7766</td>
-          <td>05/08/2025</td>
-          <td>10:30</td>
-          <td>Pediatra</td>
-        </tr>
-        <tr>
-          <td>Marina Lopes</td>
-          <td>marina@email.com</td>
-          <td>06/08/2025</td>
-          <td>09:00</td>
-          <td>Cardiologista</td>
-        </tr>
-        <tr>
-          <td>João Silva</td>
-          <td>joaopedro@email.com</td>
-          <td>07/08/2025</td>
-          <td>15:00</td>
-          <td>Dermatologista</td>
-        </tr>
-      </tbody>
-    </table>
+    <div class="table-responsive">
+      <table class="tabela">
+        <thead>
+          <tr>
+            <th>Nome completo</th>
+            <th>Telefone / E-mail</th>
+            <th>Data preferencial</th>
+            <th>Hora preferencial</th>
+            <th>Especialidade</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Lucas Almeida</td>
+            <td>(34) 99888-7766</td>
+            <td>05/08/2025</td>
+            <td>10:30</td>
+            <td>Pediatra</td>
+          </tr>
+          <tr>
+            <td>Marina Lopes</td>
+            <td>marina@email.com</td>
+            <td>06/08/2025</td>
+            <td>09:00</td>
+            <td>Cardiologista</td>
+          </tr>
+          <tr>
+            <td>João Silva</td>
+            <td>joaopedro@email.com</td>
+            <td>07/08/2025</td>
+            <td>15:00</td>
+            <td>Dermatologista</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
   </main>
   <footer class="bg-light text-center p-3 mt-4">
     <small>© Clínica Médica - Sistema Interno</small>
