--- a/estrutura interna/listar-funcionarios.html
+++ b/estrutura interna/listar-funcionarios.html
@@ -26,33 +26,35 @@
 
   <main class="container mt-4">
     <h2 class="mb-4">Funcionários cadastrados</h2>
-    <table class="tabela">
-      <thead>
-        <tr>
-          <th>Nome</th>
-          <th>CPF</th>
-          <th>Cargo</th>
-          <th>Telefone</th>
-          <th>E-mail</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>Maria Silva</td>
-          <td>123.456.789-00</td>
-          <td>Recepcionista</td>
-          <td>(34) 99999-1234</td>
-          <td>maria@clinicasfeg.com.br</td>
-        </tr>
-        <tr>
-          <td>João Oliveira</td>
-          <td>987.654.321-00</td>
-          <td>Auxiliar</td>
-          <td>(34) 98888-5678</td>
-          <td>joao@clinicasfeg.com.br</td>
-        </tr>
-      </tbody>
-    </table>
+    <div class="table-responsive">
+      <table class="tabela">
+        <thead>
+          <tr>
+            <th>Nome</th>
+            <th>CPF</th>
+            <th>Cargo</th>
+            <th>Telefone</th>
+            <th>E-mail</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Maria Silva</td>
+            <td>123.456.789-00</td>
+            <td>Recepcionista</td>
+            <td>(34) 99999-1234</td>
+            <td>maria@clinicasfeg.com.br</td>
+          </tr>
+          <tr>
+            <td>João Oliveira</td>
+            <td>987.654.321-00</td>
+            <td>Auxiliar</td>
+            <td>(34) 98888-5678</td>
+            <td>joao@clinicasfeg.com.br</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
   </main>
   <footer class="bg-light text-center p-3 mt-4">
     <small>© Clínica Médica - Sistema Interno</small>
