--- a/estrutura interna/listar-medicos.html
+++ b/estrutura interna/listar-medicos.html
@@ -25,34 +25,35 @@
   </nav>
   <main class="container mt-4">
     <h2 class="text-center mb-4">Médicos Cadastrados</h2>
-
-    <table class="tabela">
-      <thead>
-        <tr>
-          <th>Nome</th>
-          <th>CRM</th>
-          <th>Especialidade</th>
-          <th>Telefone</th>
-          <th>E-mail</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>Dra. Ana Beatriz</td>
-          <td>123456-MG</td>
-          <td>Pediatria</td>
-          <td>(34) 99999-1111</td>
-          <td>ana@clinicasfeg.com.br</td>
-        </tr>
-        <tr>
-          <td>Dr. Rafael Costa</td>
-          <td>654321-MG</td>
-          <td>Cardiologia</td>
-          <td>(34) 98888-2222</td>
-          <td>rafael@clinicasfeg.com.br</td>
-        </tr>
-      </tbody>
-    </table>
+    <div class="table-responsive">
+      <table class="tabela">
+        <thead>
+          <tr>
+            <th>Nome</th>
+            <th>CRM</th>
+            <th>Especialidade</th>
+            <th>Telefone</th>
+            <th>E-mail</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Dra. Ana Beatriz</td>
+            <td>123456-MG</td>
+            <td>Pediatria</td>
+            <td>(34) 99999-1111</td>
+            <td>ana@clinicasfeg.com.br</td>
+          </tr>
+          <tr>
+            <td>Dr. Rafael Costa</td>
+            <td>654321-MG</td>
+            <td>Cardiologia</td>
+            <td>(34) 98888-2222</td>
+            <td>rafael@clinicasfeg.com.br</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
   </main>
   <footer class="bg-light text-center p-3 mt-4">
     <small>© Clínica Médica - Sistema Interno</small>
