--- a/estrutura interna/cadastrar-funcionario.html
+++ b/estrutura interna/cadastrar-funcionario.html
@@ -11,7 +11,12 @@
 
 <body>
   <header class="head-top">
-    <h1>Clínica Médica - Acesso Restrito</h1>
+
+    <h1>
+      <span class="d-none d-md-inline">Clínica Médica - Acesso Restrito</span>
+      <span class="d-inline d-md-none"></span>
+    </h1>
+
   </header>
 
   <nav class="navbar-clinica">
@@ -46,7 +51,8 @@
 
       <div class="form-group">
         <label for="telefone">Telefone:</label>
-        <input type="tel" id="telefone" name="telefone" class="form-control" placeholder="+55 (XX) X XXXX-XXXX" required>
+        <input type="tel" id="telefone" name="telefone" class="form-control" placeholder="+55 (XX) X XXXX-XXXX"
+          required>
       </div>
 
       <div class="form-group">
