--- a/estrutura interna/index.html
+++ b/estrutura interna/index.html
@@ -11,7 +11,12 @@
 
 <body>
   <header class="head-top">
-    <h1>Clínica Médica - Acesso Restrito</h1>
+
+    <h1>
+      <span class="d-none d-md-inline">Clínica Médica - Acesso Restrito</span>
+      <span class="d-inline d-md-none"></span>
+    </h1>
+
   </header>
 
   <nav class="navbar-clinica">
@@ -42,7 +47,8 @@
       <div class="mb-4">
         <div class="p-3 border rounded bg-white h-100">
           <h5>📑 Consultas de colaboradores</h5>
-          <p>Consulte <strong><a href="listar-funcionarios.html" class="botao_escondido">funcionários</a></strong> e <strong><a href="listar-medicos.html" class="botao_escondido">médicos</a></strong> através dos links do menu
+          <p>Consulte <strong><a href="listar-funcionarios.html" class="botao_escondido">funcionários</a></strong> e
+            <strong><a href="listar-medicos.html" class="botao_escondido">médicos</a></strong> através dos links do menu
             ou clicando nas palavras em negrito.
           </p>
         </div>
