--- a/estrutura interna/listar-medicos.html
+++ b/estrutura interna/listar-medicos.html
@@ -11,7 +11,10 @@
 
 <body>
   <header class="head-top">
-    <h1>Clínica Médica - Acesso Restrito</h1>
+    <h1>
+      <span class="d-none d-md-inline">Clínica Médica - Acesso Restrito</span>
+      <span class="d-inline d-md-none"></span>
+    </h1>
   </header>
 
   <nav class="navbar-clinica">
