--- a/estrutura interna/cadastrar-medico.html
+++ b/estrutura interna/cadastrar-medico.html
@@ -11,7 +11,12 @@
 
 <body>
   <header class="head-top">
-    <h1>Clínica Médica - Acesso Restrito</h1>
+
+    <h1>
+      <span class="d-none d-md-inline">Clínica Médica - Acesso Restrito</span>
+      <span class="d-inline d-md-none"></span>
+    </h1>
+
   </header>
 
   <nav class="navbar-clinica">
@@ -22,7 +27,7 @@
     <a class="nav-link" href="listar-medicos.html">Médicos</a>
     <a class="nav-link" href="listar-agendamentos.html">Agendamentos</a>
     <a class="nav-link" href="listar-contatos.html">Mensagens</a>
-    
+
   </nav>
 
   <main class="container mt-4">
@@ -31,7 +36,7 @@
     <form class="formulario-cadastro" method="post">
       <div class="form-group">
         <label for="nome">Nome completo:</label>
-        
+
         <input type="text" id="nome" name="nome" class="form-control" required>
       </div>
 
@@ -47,7 +52,8 @@
 
       <div class="form-group">
         <label for="telefone">Telefone:</label>
-        <input type="tel" id="telefone" name="telefone" class="form-control" placeholder="+55 (XX) X XXXX-XXXX" required>
+        <input type="tel" id="telefone" name="telefone" class="form-control" placeholder="+55 (XX) X XXXX-XXXX"
+          required>
       </div>
 
       <div class="form-group">
