--- a/contato.html
+++ b/contato.html
@@ -10,70 +10,72 @@
 </head>
 
 <body>
-
-    <div>
-        <h3 class="central">Central de Atendimento: (34) 3232-3232</h3>
-    </div>
-
-    <nav class="navbar-custom">
-        <div class="container">
-
-            <a href="index.html" class="navbar-logo">
-                <img src="images/logo-sem-fundo.png" alt="Logo da Clínica">
-            </a>
-
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <ul class="collapse navbar-nav-custom" id="navbarNav">
-                <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                <li class="nav-item"><a class="nav-link" aria-current="page" href="galeria.html">Galeria</a></li>
-                <li class="nav-item"><a class="nav-link active" href="contato.html">Contato</a></li>
-                <li class="nav-item"><a class="nav-link" href="agendamento.html">Agendamento</a></li>
-                <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
-            </ul>
-
+    <header>
+        <div>
+            <h3 class="central">Central de Atendimento: (34) 3232-3232</h3>
         </div>
-    </nav>
 
+        <nav class="navbar-custom">
+            <div class="container">
+
+                <a href="index.html" class="navbar-logo">
+                    <img src="images/logo-sem-fundo.png" alt="Logo da Clínica">
+                </a>
+
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <ul class="collapse navbar-nav-custom" id="navbarNav">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="galeria.html">Galeria</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="contato.html">Contato</a></li>
+                    <li class="nav-item"><a class="nav-link" href="agendamento.html">Agendamento</a></li>
+                    <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
+                </ul>
+
+            </div>
+        </nav>
+    </header>
     <main class="container my-4">
-        <h2>Entre em Contato</h2>
-        <p>Envie-nos suas dúvidas, sugestões ou reclamações através do formulário abaixo. Responderemos o mais breve
-            possível.</p>
-        <form>
-            <div class="mb-3">
-                <label for="name" class="form-label">Nome:</label>
-                <input type="text" class="form-control" id="name" name="name" required>
-            </div>
-            <div class="mb-3">
-                <label for="email" class="form-label">Email:</label>
-                <input type="email" class="form-control" id="email" name="email" required>
-            </div>
-            <div class="mb-3">
-                <label for="subject" class="form-label">Assunto:</label>
-                <input type="text" class="form-control" id="subject" name="subject">
-            </div>
-            <div class="mb-3">
-                <label for="message" class="form-label">Mensagem:</label>
-                <textarea class="form-control" id="message" name="message" rows="5" required></textarea>
-            </div>
-            <button type="submit" class="botao-submit">Enviar Mensagem</button>
-        </form>
+        <section>
+            <h2>Entre em Contato</h2>
+            <p>Envie-nos suas dúvidas, sugestões ou reclamações através do formulário abaixo. Responderemos o mais breve
+                possível.</p>
+            <form>
+                <div class="mb-3">
+                    <label for="name" class="form-label">Nome:</label>
+                    <input type="text" class="form-control" id="name" name="name" required>
+                </div>
+                <div class="mb-3">
+                    <label for="email" class="form-label">Email:</label>
+                    <input type="email" class="form-control" id="email" name="email" required>
+                </div>
+                <div class="mb-3">
+                    <label for="subject" class="form-label">Assunto:</label>
+                    <input type="text" class="form-control" id="subject" name="subject">
+                </div>
+                <div class="mb-3">
+                    <label for="message" class="form-label">Mensagem:</label>
+                    <textarea class="form-control" id="message" name="message" rows="5" required></textarea>
+                </div>
+                <button type="submit" class="botao-submit">Enviar Mensagem</button>
+            </form>
+        </section>
 
-
-
-        <hr class="my-4">
-        <h3>Informações de Contato</h3>
-        <address>
-            Clínica F&G
-            Rua da Saúde, 1234
-            Bairro Central, Uberlândia - MG
-            CEP: 38400-000
-            Telefone: <a href="tel:+55343232-3232">(34) 3232-3232</a>
-            Email: <a href="mailto:contato@clinica.com">contato@fg.com</a>
-        </address>
+        <section>
+            <hr class="my-4">
+            <h3>Informações de Contato</h3>
+            <address>
+                Clínica F&G
+                Rua da Saúde, 1234
+                Bairro Central, Uberlândia - MG
+                CEP: 38400-000
+                Telefone: <a href="tel:+55343232-3232">(34) 3232-3232</a>
+                Email: <a href="mailto:contato@clinica.com">contato@fg.com</a>
+            </address>
+        </section>
     </main>
     <footer class=" text-white text-center p-3">
         <div class="container">
