--- a/galeria.html
+++ b/galeria.html
@@ -10,68 +10,74 @@
 </head>
 
 <body>
-
-    <div>
-        <h3 class="central">Central de Atendimento: (34) 3232-3232</h3>
-    </div>
-
-    <nav class="navbar-custom">
-        <div class="container">
-
-            <a href="index.html" class="navbar-logo">
-                <img src="images/logo-sem-fundo.png" alt="Logo da Clínica">
-            </a>
-
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <ul class="collapse navbar-nav-custom" id="navbarNav">
-                <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                <li class="nav-item"><a class="nav-link active" aria-current="page" href="galeria.html">Galeria</a></li>
-                <li class="nav-item"><a class="nav-link" href="contato.html">Contato</a></li>
-                <li class="nav-item"><a class="nav-link" href="agendamento.html">Agendamento</a></li>
-                <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
-            </ul>
-
+    <header>
+        <div>
+            <h3 class="central">Central de Atendimento: (34) 3232-3232</h3>
         </div>
-    </nav>
 
+        <nav class="navbar-custom">
+            <div class="container">
+
+                <a href="index.html" class="navbar-logo">
+                    <img src="images/logo-sem-fundo.png" alt="Logo da Clínica">
+                </a>
+
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <ul class="collapse navbar-nav-custom" id="navbarNav">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="galeria.html">Galeria</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contato.html">Contato</a></li>
+                    <li class="nav-item"><a class="nav-link" href="agendamento.html">Agendamento</a></li>
+                    <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
+                </ul>
+
+            </div>
+        </nav>
+    </header>
     <main class="container my-4">
-        <h1 class="titulo-galeria">Galeria F&G</h1>
-        <p>Aqui você pode ver imagens da nossa infraestrutura e instalações.</p>
-        <p>Confira abaixo algumas fotos da nossa clínica:</p>
-        <table class="tabela">
-            <tbody>
-                <tr>
-                    <td>
-                        <a href="images/fachada.png" target="_blank">
-                            <img src="images/fachada.png" alt="Fachada da Clínica" class="img-fluid rounded ">
-                        </a>
-                    </td>
-                    <td><a href="images/estacionamento.png" target="_blank">
-                            <img src="images/estacionamento.png" alt="Estacionamento da Clínica"
-                                class="img-fluid rounded ">
-                        </a>
-                    </td>
-                </tr>
-                <tr>
-                    <td><a href="images/clinica.png" target="_blank">
-                            <img src="images/clinica.png" alt="Clínica" class="img-fluid rounded ">
-                        </a>
-                    </td>
-                    <td><a href="images/atendimento.png" target="_blank">
-                            <img src="images/atendimento.png" alt="atendimento da Clínica" class="img-fluid rounded ">
-                        </a>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-
-        <h2 class="titulo-galeria">Nossa Localização</h2>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d691705.2849035033!2d-69.30782986881658!3d-23.925352377177177!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x96af46527fef1c47%3A0x34dbbb7aa8223dc!2sAtacama%20Desert!5e1!3m2!1sen!2sbr!4v1753902396561!5m2!1sen!2sbr" style="border-radius:15px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-
+        <section>
+            <h1 class="titulo-galeria">Galeria F&G</h1>
+            <p>Aqui você pode ver imagens da nossa infraestrutura e instalações.</p>
+            <p>Confira abaixo algumas fotos da nossa clínica:</p>
+            <table class="tabela">
+                <tbody>
+                    <tr>
+                        <td>
+                            <a href="images/fachada.png" target="_blank">
+                                <img src="images/fachada.png" alt="Fachada da Clínica" class="img-fluid rounded ">
+                            </a>
+                        </td>
+                        <td><a href="images/estacionamento.png" target="_blank">
+                                <img src="images/estacionamento.png" alt="Estacionamento da Clínica"
+                                    class="img-fluid rounded ">
+                            </a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td><a href="images/clinica.png" target="_blank">
+                                <img src="images/clinica.png" alt="Clínica" class="img-fluid rounded ">
+                            </a>
+                        </td>
+                        <td><a href="images/atendimento.png" target="_blank">
+                                <img src="images/atendimento.png" alt="atendimento da Clínica"
+                                    class="img-fluid rounded ">
+                            </a>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+        <section>
+            <h2 class="titulo-galeria">Nossa Localização</h2>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d691705.2849035033!2d-69.30782986881658!3d-23.925352377177177!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x96af46527fef1c47%3A0x34dbbb7aa8223dc!2sAtacama%20Desert!5e1!3m2!1sen!2sbr!4v1753902396561!5m2!1sen!2sbr"
+                style="border-radius:15px;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </section>
 
     </main>
 
