--- a/index.html
+++ b/index.html
@@ -10,179 +10,184 @@
 </head>
 
 <body>
-
-<div>
-    <h3 class="central">Central de Atendimento: (34) 3232-3232</h3>
-</div>
-
-<nav class="navbar-custom">
-    <div class="container">
-
-        <a href="index.html" class="navbar-logo">
-            <img src="images/logo-sem-fundo.png" alt="Logo da Clínica">
-        </a>
-
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <ul class="collapse navbar-nav-custom" id="navbarNav">
-            <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
-            <li class="nav-item"><a class="nav-link" aria-current="page" href="galeria.html">Galeria</a></li>
-            <li class="nav-item"><a class="nav-link" href="contato.html">Contato</a></li>
-            <li class="nav-item"><a class="nav-link" href="agendamento.html">Agendamento</a></li>
-            <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
-        </ul>
-
-    </div>
-</nav>
-
-<main>
-    <div class="principal">
-        <img src="images/clinica-background.png">
-        <div class="legenda">
-            <h1>Clinica F&G</h1>
-            <h3>A clínica da sua família</h3>
+    <header>
+        <div>
+            <h3 class="central">Central de Atendimento: (34) 3232-3232</h3>
         </div>
-    </div>
-    <div class="cards-container">
-        <div class="header">
-            <p class="subtitulo">NA CLÍNICA F&G</p>
-            <h1 class="titulo">Desenvolvemos produtos e inovação para:</h1>
-        </div>
-        <div class="cards-wrapper">
-            <div class="card">
-                <div class="card-image-container">
-                    <img src="images/card1.jpg" alt="Doctor examining a pregnant woman">
-                </div>
-                <div class="card-content">
-                    <p>Facilitar o acompanhamento preciso e correto do desenvolvimento do feto e da saúde da mãe</p>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-image-container">
-                    <img src="images/card2.jpg" alt="Pregnant woman relaxing on a couch">
-                </div>
-                <div class="card-content">
-                    <p>Humanizar o cuidado com a gestante e valorizar cada momento da vivência da gestação</p>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-image-container">
-                    <img src="images/card3.avif" alt="Woman with a baby looking at a laptop">
-                </div>
-                <div class="card-content">
-                    <p>Popularizar o acesso a um acompanhamento gestacional de qualidade.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="cards-container2">
-        <div class="header">
-            <p class="subtitulo">Portfólio</p>
-            <h1 class="titulo">Nossos produtos:</h1>
-        </div>
-        <div class="cards-wrapper">
-            <div class="card">
-                <div class="card-image-container">
-                    <img src="images/card6.jpg" alt="Manipulação medicamentos">
-                </div>
-                <div class="card-content">
-                    <h3>Manipulação de Medicamentos</h3>
-                </div>
-            </div>
 
-            <div class="card">
-                <div class="card-image-container">
-                    <img src="images/card4.jpg" alt="Tecnologia na estética">
+        <nav class="navbar-custom">
+            <div class="container">
+
+                <a href="index.html" class="navbar-logo">
+                    <img src="images/logo-sem-fundo.png" alt="Logo da Clínica">
+                </a>
+
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <ul class="collapse navbar-nav-custom" id="navbarNav">
+                    <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="galeria.html">Galeria</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contato.html">Contato</a></li>
+                    <li class="nav-item"><a class="nav-link" href="agendamento.html">Agendamento</a></li>
+                    <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
+                </ul>
+
+            </div>
+        </nav>
+    </header>
+    <main>
+        <section class="principal">
+            <img src="images/clinica-background.png">
+            <div class="legenda">
+                <h1>Clinica F&G</h1>
+                <h3>A clínica da sua família</h3>
+            </div>
+        </section>
+        <section class="cards-container">
+            <div class="titulo-card">
+                <p class="subtitulo">NA CLÍNICA F&G</p>
+                <h1 class="titulo">Desenvolvemos produtos e inovação para:</h1>
+            </div>
+            <div class="cards-wrapper">
+                <div class="card">
+                    <div class="card-image-container">
+                        <img src="images/card1.jpg" alt="Doctor examining a pregnant woman">
+                    </div>
+                    <div class="card-content">
+                        <p>Facilitar o acompanhamento preciso e correto do desenvolvimento do feto e da saúde da mãe</p>
+                    </div>
                 </div>
-                <div class="card-content">
-                    <h3>Criofrequência</h3>
+                <div class="card">
+                    <div class="card-image-container">
+                        <img src="images/card2.jpg" alt="Pregnant woman relaxing on a couch">
+                    </div>
+                    <div class="card-content">
+                        <p>Humanizar o cuidado com a gestante e valorizar cada momento da vivência da gestação</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-image-container">
+                        <img src="images/card3.avif" alt="Woman with a baby looking at a laptop">
+                    </div>
+                    <div class="card-content">
+                        <p>Popularizar o acesso a um acompanhamento gestacional de qualidade.</p>
+                    </div>
                 </div>
             </div>
-            <div class="card">
-                <div class="card-image-container">
-                    <img src="images/card5.jpeg" alt="Ultrassonografia 6d">
+        </section>
+        <section class="cards-container2">
+            <div class="header">
+                <p class="subtitulo">Portfólio</p>
+                <h1 class="titulo">Nossos produtos:</h1>
+            </div>
+            <div class="cards-wrapper">
+                <div class="card">
+                    <div class="card-image-container">
+                        <img src="images/card6.jpg" alt="Manipulação medicamentos">
+                    </div>
+                    <div class="card-content">
+                        <h3>Manipulação de Medicamentos</h3>
+                    </div>
                 </div>
-                <div class="card-content">
-                    <h3>Ultrassonografia 5D</h3>
+
+                <div class="card">
+                    <div class="card-image-container">
+                        <img src="images/card4.jpg" alt="Tecnologia na estética">
+                    </div>
+                    <div class="card-content">
+                        <h3>Criofrequência</h3>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-image-container">
+                        <img src="images/card5.jpeg" alt="Ultrassonografia 6d">
+                    </div>
+                    <div class="card-content">
+                        <h3>Ultrassonografia 5D</h3>
+                    </div>
                 </div>
             </div>
+        </section>
+        <section class="duvidas-container">
+            <h2 class="duvidas-title">Dúvidas frequentes</h2>
+            <div class="duvidas-item">
+                <div class="duvidas-pergunta">
+                    O que é a Clínica F&G?
+                    <span class="arrow">▼</span>
+                </div>
+                <div class="duvidas-resposta">
+                    <p>A Clínica F&G é um centro médico completo e moderno, dedicado a oferecer atendimento de saúde de
+                        excelência em diversas especialidades.
+                        Nosso principal objetivo é proporcionar um cuidado humanizado e integral para você e sua
+                        família.</p>
+                </div>
+            </div>
+            <div class="duvidas-item">
+                <div class="duvidas-pergunta">
+                    Quais especialidades médicas estão disponíveis na Clínica F&G?
+                    <span class="arrow">▼</span>
+                </div>
+                <div class="duvidas-resposta">
+                    <p>Na Clínica F&G, você encontra uma vasta gama de especialidades médicas para cuidar da sua saúde
+                        de forma abrangente. Contamos com profissionais
+                        em clínica geral, cardiologia, dermatologia, ginecologia, pediatria, ortopedia e muitas outras
+                        áreas.</p>
+                </div>
+            </div>
+            <div class="duvidas-item">
+                <div class="duvidas-pergunta">
+                    A Clínica F&G aceita planos de saúde?
+                    <span class="arrow">▼</span>
+                </div>
+                <div class="duvidas-resposta">
+                    <p>Sim, a Clínica F&G tem convênio com diversos planos de saúde para facilitar seu acesso aos nossos
+                        serviços.</p>
+                </div>
+            </div>
+            <div class="duvidas-item">
+                <div class="duvidas-pergunta">
+                    Posso realizar exames na Clínica F&G?
+                    <span class="arrow">▼</span>
+                </div>
+                <div class="duvidas-resposta">
+                    <p>Sim, a Clínica F&G oferece a comodidade de realizar uma variedade de exames laboratoriais
+                        e de imagem, como ultrassonografia e eletrocardiograma, em um só lugar.</p>
+                </div>
+            </div>
+        </section>
+
+
+    </main>
+
+    <footer class=" text-white text-center p-3">
+        <div class="container">
+            <p>&copy; 2025 - Clínica F&G. Todos os direitos reservados.</p>
         </div>
-    </div>
-    <div class="duvidas-container">
-        <h2 class="duvidas-title">Dúvidas frequentes</h2>
-        <div class="duvidas-item">
-            <div class="duvidas-pergunta">
-                O que é a Clínica F&G?
-                <span class="arrow">▼</span>
-            </div>
-            <div class="duvidas-resposta">
-                <p>A Clínica F&G é um centro médico completo e moderno, dedicado a oferecer atendimento de saúde de excelência em diversas especialidades.
-                    Nosso principal objetivo é proporcionar um cuidado humanizado e integral para você e sua família.</p>
-            </div>
-        </div>
-        <div class="duvidas-item">
-            <div class="duvidas-pergunta">
-                Quais especialidades médicas estão disponíveis na Clínica F&G?
-                <span class="arrow">▼</span>
-            </div>
-            <div class="duvidas-resposta">
-                <p>Na Clínica F&G, você encontra uma vasta gama de especialidades médicas para cuidar da sua saúde de forma abrangente. Contamos com profissionais
-                    em clínica geral, cardiologia, dermatologia, ginecologia, pediatria, ortopedia e muitas outras áreas.</p>
-            </div>
-        </div>
-        <div class="duvidas-item">
-            <div class="duvidas-pergunta">
-                A Clínica F&G aceita planos de saúde?
-                <span class="arrow">▼</span>
-            </div>
-            <div class="duvidas-resposta">
-                <p>Sim, a Clínica F&G tem convênio com diversos planos de saúde para facilitar seu acesso aos nossos serviços.</p>
-            </div>
-        </div>
-        <div class="duvidas-item">
-            <div class="duvidas-pergunta">
-                Posso realizar exames na Clínica F&G?
-                <span class="arrow">▼</span>
-            </div>
-            <div class="duvidas-resposta">
-                <p>Sim, a Clínica F&G oferece a comodidade de realizar uma variedade de exames laboratoriais
-                    e de imagem, como ultrassonografia e eletrocardiograma, em um só lugar.</p>
-            </div>
-        </div>
-    </div>
+    </footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        const perguntas = document.querySelectorAll('.duvidas-pergunta');
 
-</main>
+        perguntas.forEach(function (pergunta) {
+            pergunta.addEventListener('click', function () {
+                var resposta = pergunta.nextElementSibling;
+                var arrow = this.querySelector('.arrow');
+                if (resposta.classList.contains('active')) {
+                    resposta.classList.remove('active');
+                    arrow.textContent = '▼';
+                }
+                else {
+                    resposta.classList.add('active');
+                    arrow.textContent = '▲';
+                }
+            })
 
-<footer class=" text-white text-center p-3">
-    <div class="container">
-        <p>&copy; 2025 - Clínica F&G. Todos os direitos reservados.</p>
-    </div>
-</footer>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-<script>
-    const perguntas = document.querySelectorAll('.duvidas-pergunta');
-
-    perguntas.forEach(function (pergunta) {
-        pergunta.addEventListener('click', function () {
-            var resposta = pergunta.nextElementSibling;
-            var arrow = this.querySelector('.arrow');
-            if (resposta.classList.contains('active')) {
-                resposta.classList.remove('active');
-                arrow.textContent = '▼';
-            }
-            else{
-            resposta.classList.add('active');
-            arrow.textContent = '▲';
-            }
-        })
-
-    });
-</script>
+        });
+    </script>
 
 </body>
 
