--- a/login.html
+++ b/login.html
@@ -10,35 +10,37 @@
 </head>
 
 <body>
-    <div>
-        <h3 class="central">Central de Atendimento: (34) 3232-3232</h3>
-    </div>
-
-    <nav class="navbar-custom">
-        <div class="container">
-
-            <a href="index.html" class="navbar-logo">
-                <img src="images/logo-sem-fundo.png" alt="Logo da Clínica">
-            </a>
-
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <ul class="collapse navbar-nav-custom" id="navbarNav">
-                <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                <li class="nav-item"><a class="nav-link " aria-current="page" href="galeria.html">Galeria</a></li>
-                <li class="nav-item"><a class="nav-link" href="contato.html">Contato</a></li>
-                <li class="nav-item"><a class="nav-link" href="agendamento.html">Agendamento</a></li>
-                <li class="nav-item"><a class="nav-link active" href="login.html">Login</a></li>
-            </ul>
-
+    <header>
+        <div>
+            <h3 class="central">Central de Atendimento: (34) 3232-3232</h3>
         </div>
-    </nav>
+
+        <nav class="navbar-custom">
+            <div class="container">
+
+                <a href="index.html" class="navbar-logo">
+                    <img src="images/logo-sem-fundo.png" alt="Logo da Clínica">
+                </a>
+
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <ul class="collapse navbar-nav-custom" id="navbarNav">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="galeria.html">Galeria</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contato.html">Contato</a></li>
+                    <li class="nav-item"><a class="nav-link" href="agendamento.html">Agendamento</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="login.html">Login</a></li>
+                </ul>
+
+            </div>
+        </nav>
+    </header>
 
     <main class="container">
-        <div class="card-login">
+        <section class="card-login">
             <h2>Olá, colaborador!</h2>
             <p>Faça login para acessar sua conta.</p>
             <form>
@@ -55,7 +57,7 @@
                 </div>
 
             </form>
-        </div>
+        </section>
     </main>
 
     <footer class=" text-white text-center p-3">
