[add] method no login

--- a/agendamento.html
+++ b/agendamento.html
@@ -41,7 +41,7 @@
     <main>
         <section class="agendamento-form">
             <h2>Agende sua Consulta</h2>
-            <form action="#" method="POST" class="formulario">
+            <form action="agendamento.php" method="POST" class="formulario">
                 <div class="grupo-form">
                     <label for="name">Nome Completo:</label>
                     <input type="text" id="name" name="name" required>
