--- a/login.html
+++ b/login.html
@@ -43,7 +43,7 @@
         <section class="card-login">
             <h2>Olá, colaborador!</h2>
             <p>Faça login para acessar sua conta.</p>
-            <form>
+            <form method="post" action="loginfeg.php">
                 <div class="mb-3">
                     <label for="username" class="form-label">Usuário ou Email:</label>
                     <input type="text" class="form-control" id="username" name="username" required>
