[add] listagem dinamica de contatos

--- a/estrutura interna/cadastrar-medico.html
+++ b/estrutura interna/cadastrar-medico.html
@@ -26,7 +26,7 @@
     <a class="nav-link" href="listar-funcionarios.html">Funcionários</a>
     <a class="nav-link" href="listar-medicos.html">Médicos</a>
     <a class="nav-link" href="listar-agendamentos.html">Agendamentos</a>
-    <a class="nav-link" href="listar-contatos.html">Mensagens</a>
+    <a class="nav-link" href="mostra-contato.php">Mensagens</a>
 
   </nav>
 
