--- a/estrutura interna/listar-medicos.html
+++ b/estrutura interna/listar-medicos.html
@@ -24,7 +24,7 @@
     <a class="nav-link" href="listar-funcionarios.html">Funcionários</a>
     <a class="nav-link active" href="listar-medicos.html">Médicos</a>
     <a class="nav-link" href="listar-agendamentos.html">Agendamentos</a>
-    <a class="nav-link" href="listar-contatos.html">Mensagens</a>
+    <a class="nav-link" href="mostra-contato.php">Mensagens</a>
   </nav>
   <main class="container mt-4">
     <h2 class="text-center mb-4">Médicos Cadastrados</h2>
