--- a/contato.html
+++ b/contato.html
@@ -43,22 +43,26 @@
             <h2>Entre em Contato</h2>
             <p>Envie-nos suas dúvidas, sugestões ou reclamações através do formulário abaixo. Responderemos o mais breve
                 possível.</p>
-            <form>
+            <form action="contato.php" method="post">
                 <div class="mb-3">
-                    <label for="name" class="form-label">Nome:</label>
-                    <input type="text" class="form-control" id="name" name="name" required>
+                    <label for="nome" class="form-label">Nome:</label>
+                    <input type="text" class="form-control" id="nome" name="nome" required>
                 </div>
                 <div class="mb-3">
                     <label for="email" class="form-label">Email:</label>
                     <input type="email" class="form-control" id="email" name="email" required>
                 </div>
                 <div class="mb-3">
-                    <label for="subject" class="form-label">Assunto:</label>
-                    <input type="text" class="form-control" id="subject" name="subject">
+                    <label for="telefone" class="form-label">Telefone:</label>
+                    <input type="tel" class="form-control" id="telefone" name="telefone" required>
                 </div>
                 <div class="mb-3">
-                    <label for="message" class="form-label">Mensagem:</label>
-                    <textarea class="form-control" id="message" name="message" rows="5" required></textarea>
+                    <label for="mensagem" class="form-label">Mensagem:</label>
+                    <textarea class="form-control" id="mensagem" name="mensagem" rows="5" required></textarea>
+                </div>
+                <div class="mb-3">
+                    <label for="data_contato" class="form-label">Data do contato:</label>
+                    <input type="date" class="form-control" id="data_contato" name="data_contato">
                 </div>
                 <button type="submit" class="botao-submit">Enviar Mensagem</button>
             </form>
