[add] redirecionamento do botao "mensagens" no index

--- a/estrutura interna/index.html
+++ b/estrutura interna/index.html
@@ -58,7 +58,7 @@
           <h5>💬 Agendas e mensagens</h5>
           <p>Consulte <strong><a href="listar-agendamentos.html" class="botao_escondido">agendas</a></strong> dos
             médicos e
-            <strong><a href="listar-contatos.html" class="botao_escondido">mensagens</a></strong> enviadas pelos
+            <strong><a href="mostra-contato.php" class="botao_escondido">mensagens</a></strong> enviadas pelos
             pacientes através dos links do menu
             ou clicando nas palavras em negrito.
           </p>
